--- a/Portfolio.html
+++ b/Portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sai Sanjana Prodduturu's Portfolio</title>
+    <title>Sai Sanjana Prodduturu's Portfoli</title>
     <style>
         body {
             font-family: Arial, sans-serif;
